tested with java8/tomcat8, updated docu, added jetty config to try it faster